syntax="proto3";

option go_package = "./libs;question";

message Question {
  reserved 1;
  reserved "id";
  string title = 2;
  string content = 3;
  uint32 created_by_id = 4;
  string created_date = 5;
  string updated_date = 6;
  bool active = 7;
}

message CreateQuestionRequest {
  Question question = 1;
}
message CreateQuestionResponse {
  Question question = 1;
}

message UpdateQuestionRequest {
  Question question = 1;
  uint32 id = 2;
}
message UpdateQuestionResponse {
  Question question = 1;
}

message ListQuestionRequest {}
message ListQuestionResponse {
  repeated Question question = 1;
}

message RetrieveQuestionRequest {
  uint32 id = 1;
}
message RetrieveQuestionResponse {
  Question question = 1;
}

message DeleteQuestionRequest {
  uint32 id = 1;
}
message DeleteQuestionResponse {
  bool success = 1;
  string response = 2;
}